--- a/Festival-App/Festival-App/Platform/Storyboards/MyAccount.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/MyAccount.storyboard
@@ -184,7 +184,7 @@
         <!--Navigation Controller-->
         <scene sceneID="Jkl-JE-WZt">
             <objects>
-                <navigationController storyboardIdentifier="ProfileVC" automaticallyAdjustsScrollViewInsets="NO" id="DA4-0S-ipW" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="Profile" automaticallyAdjustsScrollViewInsets="NO" id="DA4-0S-ipW" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Oib-6p-g1W">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
