--- a/Festival-App/Festival-App/Platform/Storyboards/News.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/News.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--NewsVC-->
+        <!--News View Controller-->
         <scene sceneID="kpU-FQ-20X">
             <objects>
-                <viewController id="aqS-96-o9y" customClass="NewsVC" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="aqS-96-o9y" customClass="NewsViewController" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9EI-N3-l7t"/>
                         <viewControllerLayoutGuide type="bottom" id="r4d-8I-xaY"/>
@@ -82,85 +82,55 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <webView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FZ8-oR-WUv">
+                                                        <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FZ8-oR-WUv">
                                                             <rect key="frame" x="10" y="5" width="150.5" height="85"/>
                                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="150.5" id="dPs-aH-rtO"/>
                                                                 <constraint firstAttribute="height" constant="85" id="pwz-oe-Dud"/>
                                                             </constraints>
+                                                            <connections>
+                                                                <outlet property="delegate" destination="aqS-96-o9y" id="d7K-HS-jhu"/>
+                                                            </connections>
                                                         </webView>
-                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ultra Music 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="hva-Wk-zcC">
-                                                            <rect key="frame" x="170.5" y="20" width="189.5" height="26"/>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="hva-Wk-zcC">
+                                                            <rect key="frame" x="170.5" y="20" width="189.5" height="0.0"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="21"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ultra Music 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Emc-iA-KAp">
-                                                            <rect key="frame" x="10" y="5" width="355" height="26"/>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
-                                                            <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuK-hb-kzw">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuK-hb-kzw">
                                                             <rect key="frame" x="10" y="98" width="355" height="71"/>
-                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="12"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="15"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qXk-Z9-xVZ">
-                                                            <rect key="frame" x="10" y="60" width="355" height="110"/>
-                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="12"/>
-                                                            <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25.04.2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Lz-FL-hHf">
-                                                            <rect key="frame" x="171.5" y="54" width="188.5" height="14"/>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="10"/>
-                                                            <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25.04.2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zOt-SO-tMm">
-                                                            <rect key="frame" x="10" y="39" width="151" height="14"/>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="10"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Lz-FL-hHf">
+                                                            <rect key="frame" x="171.5" y="28" width="188.5" height="0.0"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="Emc-iA-KAp" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="5UZ-hf-aHw"/>
                                                         <constraint firstItem="FZ8-oR-WUv" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="BeG-cm-4jr"/>
                                                         <constraint firstItem="wuK-hb-kzw" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="DNx-JC-Ds0"/>
                                                         <constraint firstAttribute="trailing" secondItem="wuK-hb-kzw" secondAttribute="trailing" constant="10" id="EQR-fs-pkd"/>
                                                         <constraint firstItem="FZ8-oR-WUv" firstAttribute="top" secondItem="LMv-LY-uO7" secondAttribute="top" constant="5" id="K8f-rH-Sfx"/>
                                                         <constraint firstItem="6Lz-FL-hHf" firstAttribute="trailing" secondItem="LMv-LY-uO7" secondAttribute="trailingMargin" id="KiY-r9-xf6"/>
                                                         <constraint firstItem="hva-Wk-zcC" firstAttribute="top" secondItem="LMv-LY-uO7" secondAttribute="top" constant="20" id="LzP-tn-X9A"/>
-                                                        <constraint firstAttribute="trailing" secondItem="qXk-Z9-xVZ" secondAttribute="trailing" constant="10" id="MiH-iX-FoD"/>
                                                         <constraint firstItem="6Lz-FL-hHf" firstAttribute="top" secondItem="hva-Wk-zcC" secondAttribute="bottom" constant="8" id="Ncl-qN-vN2"/>
                                                         <constraint firstItem="wuK-hb-kzw" firstAttribute="top" secondItem="FZ8-oR-WUv" secondAttribute="bottom" constant="8" id="OAG-Wk-hIj"/>
-                                                        <constraint firstItem="qXk-Z9-xVZ" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="Yeu-Gh-LQE"/>
-                                                        <constraint firstItem="zOt-SO-tMm" firstAttribute="leading" secondItem="LMv-LY-uO7" secondAttribute="leading" constant="10" id="Z9P-2e-PIT"/>
                                                         <constraint firstAttribute="trailing" secondItem="hva-Wk-zcC" secondAttribute="trailing" constant="15" id="Zss-xy-aVv"/>
                                                         <constraint firstItem="hva-Wk-zcC" firstAttribute="leading" secondItem="FZ8-oR-WUv" secondAttribute="trailing" constant="10" id="bhW-QE-vCX"/>
-                                                        <constraint firstItem="zOt-SO-tMm" firstAttribute="top" secondItem="Emc-iA-KAp" secondAttribute="bottom" constant="8" id="cgp-Wc-2WN"/>
                                                         <constraint firstAttribute="bottom" secondItem="wuK-hb-kzw" secondAttribute="bottom" constant="11" id="eiN-Mb-qjj"/>
                                                         <constraint firstItem="6Lz-FL-hHf" firstAttribute="leading" secondItem="FZ8-oR-WUv" secondAttribute="trailing" constant="11" id="jPu-nr-Fdz"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Emc-iA-KAp" secondAttribute="trailing" constant="10" id="ocu-lO-n0B"/>
-                                                        <constraint firstItem="6Lz-FL-hHf" firstAttribute="leading" secondItem="zOt-SO-tMm" secondAttribute="trailing" constant="10" id="ohJ-0t-sRR"/>
-                                                        <constraint firstAttribute="bottom" secondItem="qXk-Z9-xVZ" secondAttribute="bottom" constant="10" id="p87-CN-xx5"/>
-                                                        <constraint firstItem="qXk-Z9-xVZ" firstAttribute="top" secondItem="LMv-LY-uO7" secondAttribute="top" constant="60" id="t63-XN-O7P"/>
-                                                        <constraint firstItem="Emc-iA-KAp" firstAttribute="top" secondItem="LMv-LY-uO7" secondAttribute="top" constant="5" id="wE9-0B-wKB"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <connections>
                                                     <outlet property="dateLabel" destination="6Lz-FL-hHf" id="2Bk-et-Drn"/>
                                                     <outlet property="newsTextLabel" destination="wuK-hb-kzw" id="R0O-h8-vH5"/>
-                                                    <outlet property="simpleDateLabel" destination="zOt-SO-tMm" id="u3z-Gg-Ui7"/>
-                                                    <outlet property="simpleTextLabel" destination="qXk-Z9-xVZ" id="PKJ-T8-QhU"/>
-                                                    <outlet property="simpleTitleLabel" destination="Emc-iA-KAp" id="btb-4h-nXn"/>
                                                     <outlet property="titleLabel" destination="hva-Wk-zcC" id="fiG-ZO-qBT"/>
                                                     <outlet property="webView" destination="FZ8-oR-WUv" id="ZtN-zO-Znh"/>
                                                 </connections>
@@ -212,7 +182,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="menuBtn" destination="ncc-Tb-958" id="oaW-hv-8tA"/>
+                        <outlet property="menuButton" destination="ncc-Tb-958" id="oaW-hv-8tA"/>
                         <outlet property="tableView" destination="Tae-EA-sqC" id="obf-C0-oJ5"/>
                     </connections>
                 </viewController>
