--- a/Festival-App/Festival-App/Platform/Storyboards/News.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/News.storyboard
@@ -149,7 +149,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="6uW-rt-xLq">
-                                                            <rect key="frame" x="15" y="121" width="0.0" height="0.0"/>
+                                                            <rect key="frame" x="10" y="121" width="0.0" height="0.0"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="21"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -161,7 +161,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="ezs-We-RtZ">
-                                                            <rect key="frame" x="360" y="113" width="0.0" height="16"/>
+                                                            <rect key="frame" x="365" y="113" width="0.0" height="16"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -169,17 +169,17 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="Uf3-wb-EIg" firstAttribute="top" secondItem="6uW-rt-xLq" secondAttribute="bottom" constant="18" id="04e-eq-Jpc"/>
+                                                        <constraint firstItem="6uW-rt-xLq" firstAttribute="leading" secondItem="ZCm-Wd-EdB" secondAttribute="leading" constant="10" id="D8l-Xn-vfc"/>
                                                         <constraint firstItem="6uW-rt-xLq" firstAttribute="top" secondItem="cDo-sd-aXq" secondAttribute="bottom" constant="16" id="FUy-GO-DZK"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ezs-We-RtZ" secondAttribute="trailing" constant="10" id="Go1-CU-qu6"/>
                                                         <constraint firstItem="cDo-sd-aXq" firstAttribute="leading" secondItem="ZCm-Wd-EdB" secondAttribute="leading" id="H0n-LN-Ysa"/>
                                                         <constraint firstItem="ezs-We-RtZ" firstAttribute="centerY" secondItem="6uW-rt-xLq" secondAttribute="centerY" id="IkQ-9i-wBb"/>
                                                         <constraint firstItem="Uf3-wb-EIg" firstAttribute="leading" secondItem="ZCm-Wd-EdB" secondAttribute="leading" constant="10" id="Wwf-E7-QvT"/>
                                                         <constraint firstAttribute="trailing" secondItem="Uf3-wb-EIg" secondAttribute="trailing" constant="10" id="ZWT-Tc-F7f"/>
-                                                        <constraint firstItem="6uW-rt-xLq" firstAttribute="leading" secondItem="ZCm-Wd-EdB" secondAttribute="leadingMargin" id="eIt-fo-HBk"/>
                                                         <constraint firstAttribute="bottom" secondItem="Uf3-wb-EIg" secondAttribute="bottom" constant="30" id="gCA-RZ-7P8"/>
                                                         <constraint firstItem="cDo-sd-aXq" firstAttribute="top" secondItem="ZCm-Wd-EdB" secondAttribute="top" id="kGa-7J-FXj"/>
                                                         <constraint firstItem="ezs-We-RtZ" firstAttribute="top" secondItem="cDo-sd-aXq" secondAttribute="bottom" constant="8" id="kKC-kx-Apu"/>
                                                         <constraint firstAttribute="trailing" secondItem="cDo-sd-aXq" secondAttribute="trailing" id="vTH-vt-bqn"/>
-                                                        <constraint firstItem="ezs-We-RtZ" firstAttribute="trailing" secondItem="ZCm-Wd-EdB" secondAttribute="trailingMargin" id="wzC-z4-xd8"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -188,49 +188,6 @@
                                                     <outlet property="newsImageView" destination="cDo-sd-aXq" id="f9i-6m-I6F"/>
                                                     <outlet property="newsTextLabel" destination="Uf3-wb-EIg" id="RpY-Cp-vk6"/>
                                                     <outlet property="titleLabel" destination="6uW-rt-xLq" id="2fO-mO-6ax"/>
-                                                </connections>
-                                            </tableViewCell>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell" rowHeight="180" id="yH1-sW-FiO" customClass="NewsCell" customModule="Festival_App" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="456" width="375" height="180"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yH1-sW-FiO" id="Clm-rA-vLn">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="G53-l1-TGf">
-                                                            <rect key="frame" x="360" y="20" width="0.0" height="0.0"/>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="21"/>
-                                                            <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1HP-fs-hsB">
-                                                            <rect key="frame" x="10" y="169" width="355" height="0.0"/>
-                                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="15"/>
-                                                            <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="3k0-ae-aDg">
-                                                            <rect key="frame" x="360" y="28" width="0.0" height="0.0"/>
-                                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
-                                                            <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="1HP-fs-hsB" secondAttribute="trailing" constant="10" id="4Ym-AR-iff"/>
-                                                        <constraint firstAttribute="bottom" secondItem="1HP-fs-hsB" secondAttribute="bottom" constant="11" id="5S3-pM-dQd"/>
-                                                        <constraint firstItem="3k0-ae-aDg" firstAttribute="top" secondItem="G53-l1-TGf" secondAttribute="bottom" constant="8" id="6u5-7H-fdA"/>
-                                                        <constraint firstItem="3k0-ae-aDg" firstAttribute="trailing" secondItem="Clm-rA-vLn" secondAttribute="trailingMargin" id="Etk-td-m4N"/>
-                                                        <constraint firstItem="1HP-fs-hsB" firstAttribute="leading" secondItem="Clm-rA-vLn" secondAttribute="leading" constant="10" id="qTx-rJ-md9"/>
-                                                        <constraint firstItem="G53-l1-TGf" firstAttribute="top" secondItem="Clm-rA-vLn" secondAttribute="top" constant="20" id="qi5-9W-lmO"/>
-                                                        <constraint firstAttribute="trailing" secondItem="G53-l1-TGf" secondAttribute="trailing" constant="15" id="yTj-lH-zfs"/>
-                                                    </constraints>
-                                                </tableViewCellContentView>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <connections>
-                                                    <outlet property="dateLabel" destination="3k0-ae-aDg" id="fh3-PL-KKY"/>
-                                                    <outlet property="newsTextLabel" destination="1HP-fs-hsB" id="FAN-Dg-d2B"/>
-                                                    <outlet property="titleLabel" destination="G53-l1-TGf" id="1pX-vh-Hjh"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
